add javafx