@@ -2,6 +2,7 @@ import org.gradle.jvm.tasks.Jar
 
 plugins {
     id("java")
+    id("org.openjfx.javafxplugin") version "0.0.14"
     id("org.sonarqube") version "7.1.0.6387"
 }
 
@@ -12,10 +13,17 @@ repositories {
     mavenCentral()
 }
 
+java {
+    sourceCompatibility = JavaVersion.VERSION_25
+    targetCompatibility = JavaVersion.VERSION_25
+}
+
+javafx {
+    version = "25.0.1"
+    modules = listOf("javafx.controls", "javafx.graphics", "javafx.base", "javafx.fxml")
+}
+
 dependencies {
-    implementation("org.openjfx:javafx-controls:25.0.2")
-    implementation("org.openjfx:javafx-graphics:25.0.2")
-    implementation("org.openjfx:javafx-base:25.0.2")
     testImplementation(platform("org.junit:junit-bom:5.10.0"))
     testImplementation("org.junit.jupiter:junit-jupiter")
     testRuntimeOnly("org.junit.platform:junit-platform-launcher")
@@ -29,4 +37,20 @@ tasks.named<Jar>("jar") {
     manifest {
         attributes["Main-Class"] = "com.elebras1.message.MessageAppLauncher"
     }
+}
+
+tasks.register<JavaExec>("runSwing") {
+    group = "application"
+    description = "Lance l'application en mode Swing"
+    classpath = sourceSets["main"].runtimeClasspath
+    mainClass.set("com.elebras1.message.MessageAppLauncher")
+    jvmArgs("--enable-preview")
+}
+
+tasks.register<JavaExec>("runJavaFx") {
+    group = "application"
+    description = "Lance l'application en mode JavaFX"
+    classpath = sourceSets["main"].runtimeClasspath
+    mainClass.set("com.elebras1.message.MessageAppJavaFxLauncher")
+    jvmArgs("--enable-preview")
 }
